[package]
name = "anti_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.28.0"
nix = "0.23.0"
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "handleapi"] }
